# Celesta_Hackathon

./: .gitignore  README.md
backend/: env.template  main.py  pyproject.toml  requirements.txt  scripts.py
backend/app/api/: news.py  verification.py
backend/app/models/: schemas.py
backend/app/services/: deepfake_detection.py  model_manager.py  speech_to_text.py  text_detection.py  web_crawler.py
backend/app/utils/: config.py
backend/services/: crawler_service.py  groq_service.py  news_service.py  offline_model_service.py  offline_news_service.py  perplexity_service.py
backend/utils/: cache_manager.py  text_processor.py
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/fakenewsdetector/fake_news_detector/: MainActivity.kt
frontend/android/app/src/main/kotlin/com/example/wpfactcheck/: MainActivity.kt
frontend/ios/: Podfile
frontend/ios/Flutter/: Release.xcconfig
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: app.dart  main.dart
frontend/lib/core/constants/: app_constants.dart
frontend/lib/core/database/: database_helper.dart
frontend/lib/core/di/: providers.dart
frontend/lib/core/error/: exceptions.dart  failures.dart
frontend/lib/core/extensions/: build_context_extensions.dart  datetime_extensions.dart
frontend/lib/core/navigation/: app_router.dart
frontend/lib/core/network/: connectivity_service.dart
frontend/lib/core/storage/: secure_storage_service.dart  shared_preferences_service.dart
frontend/lib/core/theme/: app_colors.dart
frontend/lib/core/theming/: app_theme.dart
frontend/lib/core/utils/: either.dart  extensions.dart  validators.dart
frontend/lib/data/api/: news_api_client.dart
frontend/lib/data/api_clients/: chat_api_client.dart  fact_check_api_client.dart  news_api_client.dart
frontend/lib/data/dto/: news_response_dto.dart
frontend/lib/data/models/: fact_check_result.dart  news_article.dart  news_models.dart  user_profile.dart
frontend/lib/data/providers/: news_provider.dart
frontend/lib/data/repositories/: fact_check_repository_impl.dart  news_repository_impl.dart
frontend/lib/domain/entities/: fact_check_entity.dart  news_article_entity.dart
frontend/lib/domain/repositories/: fact_check_repository.dart  news_repository.dart
frontend/lib/domain/use_cases/: fact_check_use_case.dart  get_news_use_case.dart
frontend/lib/presentation/chat/: chat_screen.dart
frontend/lib/presentation/explore/: explore_screen.dart
frontend/lib/presentation/main/: main_screen.dart
frontend/lib/presentation/profile/: onboarding_screen.dart  profile_screen.dart
frontend/lib/presentation/providers/: fact_check_provider.dart
frontend/lib/presentation/shared_widgets/: bottom_nav_scaffold.dart  fact_check_result_sheet.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
