[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fake-news-detector-api"
version = "1.0.0"
description = "Multi-modal fake news and deepfake detection API"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # FastAPI and server
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # Web scraping and content extraction
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "newspaper3k>=0.2.8",
    "lxml[html-clean]>=4.9.3",
    # Data processing (essential)
    "numpy>=1.24.0",
    "Pillow>=10.1.0",
    # API and external services
    "httpx>=0.25.2",
    "aiohttp>=3.9.1",
    # Configuration and environment
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.3",
    # Logging and monitoring
    "loguru>=0.7.2",
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # File handling
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
ml = [
    # Machine Learning and AI (install separately if needed)
    "transformers>=4.35.2",
    "torch>=1.13.0,<2.0.0",  # Use older version for macOS x86_64 compatibility
    "opencv-python>=4.8.1.78",
    "mediapipe>=0.10.8",
    "pandas>=2.1.3",
    "scikit-learn>=1.3.2",
    # Speech recognition now uses Groq API (Whisper model)
]

dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    
    # Development tools
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    
    # Database (if needed for caching)
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
fake-news-api = "main:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
