[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "groq>=0.31.1",
    "httpx>=0.28.1",
    "newspaper3k>=0.2.8",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
